force-app/main/default/objects/Invoice__c/fields/Add_to_SF__c.field-meta.xml
<CustomField>
    <fullName>Add_to_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Old Invoice Migration</description>
    <label>Add to SF</label>
    <type>Checkbox</type>
</CustomField>