force-app/main/default/objects/Invoice__c/fields/Balance_mismatch__c.field-meta.xml
<CustomField>
    <fullName>Balance_mismatch__c</fullName>
    <description>TRUE if Balance from NetSuite &lt;&gt; Balance calculated in Salesforce</description>
    <formula>IF(
  ISBLANK(Outstanding_Balance_from_NetSuite__c),
  FALSE, 
  IF(
    ROUND(Outstanding_Balance_from_NetSuite__c,2) &lt;&gt; ROUND(Outstanding_Bln__c,2), 
    TRUE, 
    FALSE
  )
)</formula>
    <inlineHelpText>TRUE if Balance from NetSuite &lt;&gt; Balance calculated in Salesforce</inlineHelpText>
    <label>Balance mismatch</label>
    <type>Checkbox</type>
</CustomField>