force-app/main/default/objects/Invoice__c/fields/CRD_Email__c.field-meta.xml
<CustomField>
    <fullName>CRD_Email__c</fullName>
    <formula>Account__r.CRD__r.Email</formula>
    <label>CRD Email</label>
    <type>Text</type>
</CustomField>