force-app/main/default/objects/Invoice__c/fields/Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipient__c</fullName>
    <description>Recipient of the invoice as sent by Finance</description>
    <label>Email Recipient</label>
    <type>Email</type>
</CustomField>