force-app/main/default/objects/Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Gainsight was not displaying certain fields in reports as hyperlinks to the related record, so this field was created so they would have a clickable field in a report leading to the record.</description>
    <formula>HYPERLINK(&quot;https://intapp.my.salesforce.com/&quot;+Id, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>