force-app/main/default/objects/Invoice__c/fields/Is_Deleted_in_NS__c.field-meta.xml
<CustomField>
    <fullName>Is_Deleted_in_NS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE, if deleted from NetSuite</description>
    <inlineHelpText>TRUE, if deleted from NetSuite</inlineHelpText>
    <label>Is Deleted in NS?</label>
    <type>Checkbox</type>
</CustomField>