force-app/main/default/objects/Invoice__c/fields/NS_OSA_Name__c.field-meta.xml
<CustomField>
    <fullName>NS_OSA_Name__c</fullName>
    <label>NS OSA Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>