force-app/main/default/objects/Invoice__c/fields/OSA_Name__c.field-meta.xml
<CustomField>
    <fullName>OSA_Name__c</fullName>
    <formula>Related_OSA__r.Name</formula>
    <label>OSA Name</label>
    <type>Text</type>
</CustomField>