force-app/main/default/objects/Invoice__c/fields/Salesforce_User_Notes_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User_Notes_Last_Modified_By__c</fullName>
    <label>Salesforce User Notes Last Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>