force-app/main/default/objects/Invoice__c/fields/Should_Trigger_Notification__c.field-meta.xml
<CustomField>
    <fullName>Should_Trigger_Notification__c</fullName>
    <description>This field is used to audit the renewal notifications that go out when an invoice is paid after being 60 days or more overdue. This field can be deprecated once the audit is complete.</description>
    <formula>IF(
  AND(
    Due_Date__c &lt; Date_Paid__c - 59,
    ISPICKVAL(Status__c, &quot;Paid in Full&quot;)
  ),
  &quot;Yes&quot;, 
   &quot;No&quot;
)</formula>
    <label>Should Trigger Notification</label>
    <type>Text</type>
</CustomField>