force-app/main/default/objects/Invoice__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>Account_Name__c</columns>
    <columns>NAME</columns>
    <columns>OSA_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Subtotal__c</columns>
    <columns>Amount_Invoiced__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>